# EasyML

./: .gitignore  Clusters.py  Documentation.css  Documentation.html  Documentation.js  Preprocessing.py  Silhoutte score.py  algorithms.css  algorithms.html  easyml.html  elbow.py  index.css  index.html  index.js  model.css  model.html  model.js  model0.js  modelSupervisedLearning.html  modelSupervisedLearning.js  modelUnspervisedLearning.html  modelUnspervisedLearning.js  modelUnsupervisedLearning.html  model_clust.html  model_clust.js  model_dnn.html  model_dnn.js  models and parameters.md  myProfile.html  navBarUser.css  pyproject.toml  test.csv
Images/data-inform-illustration-concept/: idea.txt
Images/isometric-financial-analysis/: 16542.eps
backend/: README.md  pyproject.toml
backend/algorithms/: Clusters.py  DecisionTree.py  KNN.py  Logistic_regression.py  PCA.py  Preproc.py  Preprocessing.py  RandomForest.py  Ridge.py  SVM.py  VotingClf.py  neural_networks.py
backend/backend/: SVM.py  api.py  ezml.db  general_model.py  neural_networks.py  pytest.ini
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/backend/tests/: SVM_test.py  test_api.py  test_neural_n.py
