[tool.poetry]
name = "poetry install"
version = "0.1.0"
description = "easyml"
authors = ["Your Name <you@example.com>"]
license = "n"

[tool.poetry.dependencies]
python = "n"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
