[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Czapp Ádám <czappadam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.3.1"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
uuid = "^1.30"
werkzeug = "^1.0.1"
flask_api = "^2.0"
sklearn = "^0.0"
pandas = "^1.1.3"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
